* Pass languageCode to dates
* Update some localizations
* Use 7 days in Forecast
* Proper widget preview image
* Update dependencies
* Refactor splash logic