@@ -1,7 +1,7 @@
 name: promaja
 description: Weather app made in Flutter.
 publish_to: 'none'
-version: 1.9.9+220
+version: 1.9.9+221
 
 #
 # DEPLOYING APP
